tests/fixtures/invalid/multidimensional_array_field.c
struct Packet {
  int matrix[2][3];
};
int main(void) {
  struct Packet packet;
  return 0;
}
